--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "immer": "^9.0.12",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
