--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "axios": "^0.26.0",
     "immer": "^9.0.12",
     "next": "latest",
