--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.3.1",
     "axios": "^0.26.0",
     "immer": "^9.0.12",
     "next": "latest",
@@ -16,17 +17,34 @@
     "recoil": "^0.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
     "jest": "^27.5.1",
-    "postcss": "^8.4.5",
+    "postcss": "^8",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "webpack": "^5.70.0"
   }
 }
